--- a/index.html
+++ b/index.html
@@ -368,11 +368,14 @@
                     </div>
                     
                 </div>
+                <div class="slide_down_icon">
+                    <a href="#overview_area"><i class="fa-solid fa-sort-down"></i></a>
+                </div>
             </section>
             <!--=====================  End Banner Area  ====================--> 
 
             <!--=====================  Start Overview Area  ====================--> 
-            <section class="overview_area section_padding">
+            <section class="overview_area section_padding" id="overview_area">
                 <div class="container">
                     <div class="overview">
                         <div class="overview_title">
