--- a/index.html
+++ b/index.html
@@ -434,7 +434,9 @@
                     <div class="row g-5">
                         <div class="col-md-3">
                             <div class="single_work_item">
-                                <img src="assets/images/work/1.png" alt="">
+                                <div class="single_work_img">
+                                    <img src="assets/images/work/1.png" alt="">
+                                </div>
                                 <div class="work_single_text">
                                     <h4>SAP</h4>
                                     <p>Expert services in migration, implementation, and upgrades for seamless SAP operations.</p>
@@ -443,7 +445,9 @@
                         </div>
                         <div class="col-md-3">
                             <div class="single_work_item">
-                                <img src="assets/images/work/2.png" alt="">
+                                <div class="single_work_img">
+                                    <img src="assets/images/work/2.png" alt="">
+                                </div>
                                 <div class="work_single_text">
                                     <h4>Salesforce</h4>
                                     <p>Transform your customer relationship management with 
@@ -453,7 +457,9 @@
                         </div>
                         <div class="col-md-3">
                             <div class="single_work_item">
-                                <img src="assets/images/work/3.png" alt="">
+                                <div class="single_work_img">
+                                    <img src="assets/images/work/3.png" alt="">
+                                </div>
                                 <div class="work_single_text">
                                     <h4>Microsoft Technologies</h4>
                                     <p>Leverage our skills in .Net, C# /ASP.Net, Angular, React, O365, & more to enhance your IT infrastructure.</p>
@@ -462,7 +468,9 @@
                         </div>
                         <div class="col-md-3">
                             <div class="single_work_item">
-                                <img src="assets/images/work/4.png" alt="">
+                                <div class="single_work_img">
+                                    <img src="assets/images/work/4.png" alt="">
+                                </div>
                                 <div class="work_single_text">
                                     <h4>Cybersecurity</h4>
                                     <p>Protect your assets with our comprehensive cybersecurity strategies.</p>
@@ -471,7 +479,9 @@
                         </div>
                         <div class="col-md-3">
                             <div class="single_work_item">
-                                <img src="assets/images/work/5.png" alt="">
+                                <div class="single_work_img">
+                                    <img src="assets/images/work/5.png" alt="">
+                                </div>
                                 <div class="work_single_text">
                                     <h4>Data Analysis</h4>
                                     <p>Harness the power of big data with our cutting-edge analytics and business intelligence solutions.</p>
@@ -480,7 +490,9 @@
                         </div>
                         <div class="col-md-3">
                             <div class="single_work_item">
-                                <img src="assets/images/work/6.png" alt="">
+                                <div class="single_work_img">
+                                    <img src="assets/images/work/6.png" alt="">
+                                </div>
                                 <div class="work_single_text">
                                     <h4>Cloud Computing</h4>
                                     <p>Whether it’s AWS, Google Cloud, or MS Azure, we’ve got your cloud needs covered.</p>
@@ -489,7 +501,9 @@
                         </div>
                         <div class="col-md-3">
                             <div class="single_work_item">
-                                <img src="assets/images/work/7.png" alt="">
+                                <div class="single_work_img">
+                                    <img src="assets/images/work/7.png" alt="">
+                                </div>
                                 <div class="work_single_text">
                                     <h4>AI/ML/RPA</h4>
                                     <p>Drive efficiency and innovation with our automation and artificial intelligence solutions.</p>
@@ -498,7 +512,9 @@
                         </div>
                         <div class="col-md-3">
                             <div class="single_work_item">
-                                <img src="assets/images/work/8.png" alt="">
+                                <div class="single_work_img">
+                                    <img src="assets/images/work/8.png" alt="">
+                                </div>
                                 <div class="work_single_text">
                                     <h4>Testing</h4>
                                     <p>Ensure your systems are robust with our QA automation services.</p>
@@ -589,49 +605,65 @@
                                 <div class="row">
                                     <div class="col-md-3">
                                         <div class="single_deep_item">
-                                            <img src="assets/images/deep/1.png" alt="">
+                                            <div class="single_deep_img"> 
+                                                <img src="assets/images/deep/1.png" alt="">
+                                            </div>
                                             <h4>Finance</h4>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="single_deep_item">
-                                            <img src="assets/images/deep/2.png" alt="">
+                                            <div class="single_deep_img"> 
+                                                <img src="assets/images/deep/2.png" alt="">
+                                            </div> 
                                             <h4>LOGISTICS</h4>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="single_deep_item">
-                                            <img src="assets/images/deep/3.png" alt="">
+                                            <div class="single_deep_img"> 
+                                                <img src="assets/images/deep/3.png" alt="">
+                                            </div> 
                                             <h4>INSURANCE</h4>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="single_deep_item">
-                                            <img src="assets/images/deep/4.png" alt="">
+                                            <div class="single_deep_img"> 
+                                                <img src="assets/images/deep/4.png" alt="">
+                                            </div> 
                                             <h4>TELECOM</h4>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="single_deep_item">
-                                            <img src="assets/images/deep/5.png" alt="">
+                                            <div class="single_deep_img"> 
+                                                <img src="assets/images/deep/5.png" alt="">
+                                            </div> 
                                             <h4>utilities</h4>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="single_deep_item">
-                                            <img src="assets/images/deep/6.png" alt="">
+                                            <div class="single_deep_img"> 
+                                                <img src="assets/images/deep/6.png" alt="">
+                                            </div> 
                                             <h4>government</h4>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="single_deep_item">
-                                            <img src="assets/images/deep/7.png" alt="">
+                                            <div class="single_deep_img"> 
+                                                <img src="assets/images/deep/7.png" alt="">
+                                            </div> 
                                             <h4>EDUCATION</h4>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="single_deep_item">
-                                            <img src="assets/images/deep/8.png" alt="">
+                                            <div class="single_deep_img">
+                                                <img src="assets/images/deep/8.png" alt="">
+                                            </div> 
                                             <h4>RETAIL</h4>
                                         </div>
                                     </div>
