--- a/index.html
+++ b/index.html
@@ -631,85 +631,79 @@
                     <div class="overview_title">
                         <h4>who we serve</h4>
                         <h3>Deep expertise that transends Industries</h3> 
+                        <p>With 2 decades of expertise, we adeptly utilize our skills to deliver our clients expertly crafted, innovative, and technology-driven solutions spanning various industry verticals. </p>
                     </div>
 
-                    <div class="deep_box">
+                    <div class="deep_box">  
                         <div class="row">
-                            <div class="col-md-4">
-                                <div class="deep_left">
-                                    <p>With 2 decades of expertise, we adeptly utilize our skills to deliver our clients expertly crafted, innovative, and technology-driven solutions spanning various industry verticals. </p>
-                                    <a href="#" class="btn_2">Learn more </a>
+                            <div class="col-md-3">
+                                <div class="single_deep_item">
+                                    <div class="single_deep_img"> 
+                                        <img src="assets/images/deep/1.png" alt="">
+                                    </div>
+                                    <h4>Finance</h4>
                                 </div>
                             </div>
-                            <div class="col-md-8 g-5">
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        <div class="single_deep_item">
-                                            <div class="single_deep_img"> 
-                                                <img src="assets/images/deep/1.png" alt="">
-                                            </div>
-                                            <h4>Finance</h4>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="single_deep_item">
-                                            <div class="single_deep_img"> 
-                                                <img src="assets/images/deep/2.png" alt="">
-                                            </div> 
-                                            <h4>LOGISTICS</h4>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="single_deep_item">
-                                            <div class="single_deep_img"> 
-                                                <img src="assets/images/deep/3.png" alt="">
-                                            </div> 
-                                            <h4>INSURANCE</h4>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="single_deep_item">
-                                            <div class="single_deep_img"> 
-                                                <img src="assets/images/deep/4.png" alt="">
-                                            </div> 
-                                            <h4>TELECOM</h4>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="single_deep_item">
-                                            <div class="single_deep_img"> 
-                                                <img src="assets/images/deep/5.png" alt="">
-                                            </div> 
-                                            <h4>utilities</h4>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="single_deep_item">
-                                            <div class="single_deep_img"> 
-                                                <img src="assets/images/deep/6.png" alt="">
-                                            </div> 
-                                            <h4>government</h4>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="single_deep_item">
-                                            <div class="single_deep_img"> 
-                                                <img src="assets/images/deep/7.png" alt="">
-                                            </div> 
-                                            <h4>EDUCATION</h4>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="single_deep_item">
-                                            <div class="single_deep_img">
-                                                <img src="assets/images/deep/8.png" alt="">
-                                            </div> 
-                                            <h4>RETAIL</h4>
-                                        </div>
-                                    </div>
+                            <div class="col-md-3">
+                                <div class="single_deep_item">
+                                    <div class="single_deep_img"> 
+                                        <img src="assets/images/deep/2.png" alt="">
+                                    </div> 
+                                    <h4>LOGISTICS</h4>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="single_deep_item">
+                                    <div class="single_deep_img"> 
+                                        <img src="assets/images/deep/3.png" alt="">
+                                    </div> 
+                                    <h4>INSURANCE</h4>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="single_deep_item">
+                                    <div class="single_deep_img"> 
+                                        <img src="assets/images/deep/4.png" alt="">
+                                    </div> 
+                                    <h4>TELECOM</h4>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="single_deep_item">
+                                    <div class="single_deep_img"> 
+                                        <img src="assets/images/deep/5.png" alt="">
+                                    </div> 
+                                    <h4>utilities</h4>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="single_deep_item">
+                                    <div class="single_deep_img"> 
+                                        <img src="assets/images/deep/6.png" alt="">
+                                    </div> 
+                                    <h4>government</h4>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="single_deep_item">
+                                    <div class="single_deep_img"> 
+                                        <img src="assets/images/deep/7.png" alt="">
+                                    </div> 
+                                    <h4>EDUCATION</h4>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="single_deep_item">
+                                    <div class="single_deep_img">
+                                        <img src="assets/images/deep/8.png" alt="">
+                                    </div> 
+                                    <h4>RETAIL</h4>
                                 </div>
                             </div>
                         </div>
+                        <div class="deep_box_btn"> 
+                            <a href="#" class="btn_2">Learn more </a>
+                        </div> 
                     </div>
                 </div>
             </section>
@@ -726,7 +720,6 @@
                         <!-- single item  -->
                         <div class="made_single"> 
                             <div class="made_carosel_content">
-                                <img src="assets/images/arrow.png" alt="">
                                 <p>
                                     "From our first project with Agile Global, their proficiency in Microsoft technologies and cloud deployments was evident. Their strategic outsourcing model has provided us with innovative solutions that drive our business forward. They truly understand the complexities of our industry."
                                 </p>
@@ -735,11 +728,13 @@
                                     <p>VP of Technology, Fortune 1000 Manufacturing Company</p>
                                 </div>
                             </div>
+                            <div class="made_carousel_arrow"> 
+                                <img src="assets/images/arrow.png" alt="">
+                            </div>
                         </div>
                         <!-- single item  -->
                         <div class="made_single"> 
-                            <div class="made_carosel_content">
-                                <img src="assets/images/arrow.png" alt="">
+                            <div class="made_carosel_content"> 
                                 <p>
                                     "Agile Global Solutions is a trusted partner in our digital transformation journey. Their expertise in AI, machine learning, and data analysis has empowered us to leverage technology in ways we hadn't imagined. Their commitment to excellence is unmatched." 
                                 </p>
@@ -748,11 +743,14 @@
                                     <p>CTO, Leading Educational Institution</p>
                                 </div>
                             </div>
+                            
+                            <div class="made_carousel_arrow"> 
+                                <img src="assets/images/arrow.png" alt="">
+                            </div>
                         </div>
                         <!-- single item  -->
                         <div class="made_single"> 
-                            <div class="made_carosel_content">
-                                <img src="assets/images/arrow.png" alt="">
+                            <div class="made_carosel_content"> 
                                 <p>
                                     "We've collaborated with Agile Global Solutions on several high-profile projects, and their performance consistently exceeds expectations. Their cloud migration services and big data analytics have significantly enhanced our operational capabilities."
                                 </p>
@@ -760,12 +758,14 @@
                                     <h4>— David Wilson</h4>
                                     <p>IT Manager, Global Telecom Provider</p>
                                 </div>
+                            </div> 
+                            <div class="made_carousel_arrow"> 
+                                <img src="assets/images/arrow.png" alt="">
                             </div>
                         </div>
                         <!-- single item  -->
                         <div class="made_single">
-                            <div class="made_carosel_content">
-                                <img src="assets/images/arrow.png" alt="">
+                            <div class="made_carosel_content"> 
                                 <p>
                                     "The Agile Global team has been instrumental in our IT strategy, offering exceptional co-managed services and staffing solutions. Their deep industry knowledge and responsiveness make them a reliable partner for any organization looking to scale and innovate."
                                 </p>
@@ -773,6 +773,9 @@
                                     <h4>— Linda Martinez</h4>
                                     <p>Program Director, Top-Ranked Insurance Company</p>
                                 </div>
+                            </div> 
+                            <div class="made_carousel_arrow"> 
+                                <img src="assets/images/arrow.png" alt="">
                             </div>
                         </div>
 
