--- a/index.html
+++ b/index.html
@@ -504,22 +504,24 @@
                                     <img src="assets/images/work/3.png" alt="">
                                 </div>
                                 <div class="work_single_text">
-                                    <h4>Microsoft Technologies</h4>
+                                    <h4>Web</h4>
                                     <p>Leverage our skills in .Net, C# /ASP.Net, Angular, React, O365, & more to enhance your IT infrastructure.</p>
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-md-3">
                             <div class="single_work_item">
                                 <div class="single_work_img">
-                                    <img src="assets/images/work/4.png" alt="">
+                                    <img src="assets/images/work/7.png" alt="">
                                 </div>
                                 <div class="work_single_text">
-                                    <h4>Cybersecurity</h4>
-                                    <p>Protect your assets with our comprehensive cybersecurity strategies.</p>
+                                    <h4>AI/ML/RPA</h4>
+                                    <p>Drive efficiency and innovation with our automation and artificial intelligence solutions.</p>
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-md-3">
                             <div class="single_work_item">
                                 <div class="single_work_img">
@@ -542,14 +544,15 @@
                                 </div>
                             </div>
                         </div>
+                        
                         <div class="col-md-3">
                             <div class="single_work_item">
                                 <div class="single_work_img">
-                                    <img src="assets/images/work/7.png" alt="">
+                                    <img src="assets/images/work/4.png" alt="">
                                 </div>
                                 <div class="work_single_text">
-                                    <h4>AI/ML/RPA</h4>
-                                    <p>Drive efficiency and innovation with our automation and artificial intelligence solutions.</p>
+                                    <h4>Cybersecurity</h4>
+                                    <p>Protect your assets with our comprehensive cybersecurity strategies.</p>
                                 </div>
                             </div>
                         </div>
