--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                     </div>
                     <div class="row g-5">
                         <div class="col-md-3">
-                            <div class="single_work_item">
+                            <a href="#" class="single_work_item">
                                 <div class="single_work_img">
                                     <img src="assets/images/work/1.png" alt="">
                                 </div>
@@ -484,10 +484,10 @@
                                     <h4>SAP</h4>
                                     <p>Expert services in migration, implementation, and upgrades for seamless SAP operations.</p>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col-md-3">
-                            <div class="single_work_item">
+                            <a href="#" class="single_work_item">
                                 <div class="single_work_img">
                                     <img src="assets/images/work/2.png" alt="">
                                 </div>
@@ -496,10 +496,10 @@
                                     <p>Transform your customer relationship management with 
                                         our expert Salesforce services.</p>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col-md-3">
-                            <div class="single_work_item">
+                            <a href="#"  class="single_work_item">
                                 <div class="single_work_img">
                                     <img src="assets/images/work/3.png" alt="">
                                 </div>
@@ -507,11 +507,11 @@
                                     <h4>Web</h4>
                                     <p>Leverage our skills in .Net, C# /ASP.Net, Angular, React, O365, & more to enhance your IT infrastructure.</p>
                                 </div>
-                            </div>
+                            </a>
                         </div>
 
                         <div class="col-md-3">
-                            <div class="single_work_item">
+                            <a href="#"  class="single_work_item">
                                 <div class="single_work_img">
                                     <img src="assets/images/work/7.png" alt="">
                                 </div>
@@ -519,11 +519,11 @@
                                     <h4>AI/ML/RPA</h4>
                                     <p>Drive efficiency and innovation with our automation and artificial intelligence solutions.</p>
                                 </div>
-                            </div>
+                            </a>
                         </div>
 
                         <div class="col-md-3">
-                            <div class="single_work_item">
+                            <a href="#"  class="single_work_item">
                                 <div class="single_work_img">
                                     <img src="assets/images/work/5.png" alt="">
                                 </div>
@@ -531,10 +531,10 @@
                                     <h4>Data Analysis</h4>
                                     <p>Harness the power of big data with our cutting-edge analytics and business intelligence solutions.</p>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col-md-3">
-                            <div class="single_work_item">
+                            <a href="#"  class="single_work_item">
                                 <div class="single_work_img">
                                     <img src="assets/images/work/6.png" alt="">
                                 </div>
@@ -542,11 +542,11 @@
                                     <h4>Cloud Computing</h4>
                                     <p>Whether it’s AWS, Google Cloud, or MS Azure, we’ve got your cloud needs covered.</p>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         
                         <div class="col-md-3">
-                            <div class="single_work_item">
+                            <a href="#"  class="single_work_item">
                                 <div class="single_work_img">
                                     <img src="assets/images/work/4.png" alt="">
                                 </div>
@@ -554,10 +554,10 @@
                                     <h4>Cybersecurity</h4>
                                     <p>Protect your assets with our comprehensive cybersecurity strategies.</p>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col-md-3">
-                            <div class="single_work_item">
+                            <a href="#"  class="single_work_item">
                                 <div class="single_work_img">
                                     <img src="assets/images/work/8.png" alt="">
                                 </div>
@@ -565,7 +565,7 @@
                                     <h4>Testing</h4>
                                     <p>Ensure your systems are robust with our QA automation services.</p>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -583,7 +583,7 @@
 
                     <div class="row g-5">
                         <div class="col-md-4">
-                            <div class="single_business_item single_business_item_1 ">
+                            <a href="#" class="single_business_item single_business_item_1 ">
                                 <img src="assets/images/bussiness/1.png" alt="">
                                 <h3>Professional services</h3>
                                 <div class="single_overlay_box">
@@ -592,10 +592,10 @@
                                         Expertise on-demand to boost your in-house capabilities.
                                     </p>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col-md-4">
-                            <div class="single_business_item single_business_item_2 ">
+                            <a href="#" class="single_business_item single_business_item_2 ">
                                 <img src="assets/images/bussiness/2.png" alt="">
                                 <h3>Strategic Outsourcing</h3>
                                 <div class="single_overlay_box">
@@ -607,10 +607,10 @@
                                         core business
                                     </p>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col-md-4">
-                            <div class="single_business_item single_business_item_3 ">
+                            <a href="#" class="single_business_item single_business_item_3 ">
                                 <img src="assets/images/bussiness/3.png" alt="">
                                 <h3>Co-Managed Services</h3>
                                 <div class="single_overlay_box">
@@ -620,7 +620,7 @@
 
                                     </p>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
 
@@ -958,7 +958,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-2">
                                 <div class="footer_single">
                                     <h4>Let’s Connect</h4>
                                     <ul>  
@@ -968,15 +968,16 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-4">
                                 <div class="footer_single">
-                                    <h4>QUICK LINKS</h4>
+                                    <h4>Subscribe</h4>
                                     <ul>  
-                                        <li><a href="#">Who we are</a></li> 
-                                        <li><a href="#">What we do</a></li> 
-                                        <li><a href="#">Who we serve</a></li> 
-                                        <li><a href="#">Resources</a></li>    
+                                        <li><p>Our best insights in your inbox </p></li>      
                                     </ul>
+                                    <div class="subscribe_forms">
+                                        <input type="text">
+                                        <button >SIGN  ME UP</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1024,13 +1025,17 @@
                     <div class="single_mobile_footer">
                         <div class="container">
                             <ul class="single_mobile_ul">
-                                <li><a href="#" class="click_footer_mobiless">QUICK LINKS <i class="fa-solid fa-plus"></i></a>
+                                <li><a href="#" class="click_footer_mobiless">Subscribe <i class="fa-solid fa-plus"></i></a> 
                                     <ul>  
-                                        <li><a href="#">Who we are</a></li> 
-                                        <li><a href="#">What we do</a></li> 
-                                        <li><a href="#">Who we serve</a></li> 
-                                        <li><a href="#">Resources</a></li>    
+                                        <li><p>Our best insights in your inbox </p></li>      
+                                        <li>
+                                            <div class="subscribe_forms">
+                                                <input type="text">
+                                                <button >SIGN  ME UP</button>
+                                            </div>
+                                        </li>
                                     </ul>
+                                    
                                 </li>
                             </ul>
                         </div> 
